Level-08-AWS-Terraform-CloudWatch-Monitoring/level-8-Terraform/launch_template.tf
data "aws_ami" "al2023" {
  most_recent = true

  owners = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}
resource "aws_launch_template" "app" {
  name_prefix = "${var.project_name}-app-"

  image_id = data.aws_ami.al2023.id

  instance_type = var.instance_type

  monitoring {
    enabled = true
  }

  vpc_security_group_ids = [
    aws_security_group.ec2.id
  ]

  iam_instance_profile {
    name = aws_iam_instance_profile.ec2.name
  }

  user_data = base64encode(
    templatefile("${path.module}/user-data.sh", {
      aws_region                = var.aws_region
      ecr_repository_url        = aws_ecr_repository.app.repository_url
      docker_image_tag          = var.docker_image_tag
      project_name              = var.project_name
      cloudwatch_log_group_name = aws_cloudwatch_log_group.app.name
    })
  )
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      volume_size           = 20
      volume_type           = "gp3"
      delete_on_termination = true
      encrypted             = true
    }
  }

  metadata_options {
    http_endpoint = "enabled"
    http_tokens   = "required"
  }

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name        = "${var.project_name}-app"
      Environment = var.environment
    }
  }

  tag_specifications {
    resource_type = "volume"

    tags = {
      Name        = "${var.project_name}-app-volume"
      Environment = var.environment
    }
  }

  update_default_version = true

  tags = {
    Name        = "${var.project_name}-launch-template"
    Environment = var.environment
  }
}
